<resources>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="title_activity_maps">Title Activity Maps</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="app_name">Swheel</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="textview">TextView</string>
    <string name="Signing">SIGN IN</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Reset">Восстановить пароль</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="Registration">Регистрация</string>
    <string name="Logging">Войти</string>
    <string name="AnotherPword">Пароль еще раз</string>
    <string name="Email">Ваш Email</string>
    <string name="Sex">Пол</string>
    <string name="Male">Мужской</string>
    <string name="Female">Женский</string>
    <string name="Next">Далее</string>
    <string name="Age">Возраст</string>
    <string name="PersonalData">О себе</string>
    <string name="Name">Имя</string>
    <string name="Surname">Фамилия</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register2">Register2Activity</string>
    <string name="_age">24 года</string>
    <string name="_agePrefix">Возраст:</string>
    <string name="_description">Простой парень, веселый, умный, скромный</string>
    <string name="_descriptionPrefix">О себе:</string>
    <string name="_surname">Малютин</string>
    <string name="_name">Андрей</string>
    <string name="_onlineStatus">online</string>
    <string name="_profileHeader">ПРОФИЛЬ</string>
    <string name="_city">Пенза</string>
    <string name="_cityPrefix">Город:</string>
    <string name="_vehicles">Велосипед, самокат, скейтборд</string>
    <string name="_vehiclesPrefix">Вид транспорта:</string>
    <string name="_greenButton">Написать сообщение</string>
    <string name="_underGreenButtonText">Заблокировать пользователя</string>
    <string name="title_activity_nav_menu">NavMenuActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_save">Сохранить</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_email">Изменить почту</string>
    <string name="_next">Далее</string>
    <string name="_login">Войти</string>

</resources>
